# oblivio-backend

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  dockerfile
.cargo/: config.toml
.devcontainer/: .env  devcontainer.json
config/: development.yaml  production.yaml  test.yaml
examples/: playground.rs
migration/src/: lib.rs  m20220101_000001_users.rs  m20240331_173741_designateds.rs  m20240331_174528_assets.rs  m20240331_175235_asset_documents.rs  m20240402_235025_asset_designateds.rs
src/: app.rs
src/controllers/: asset.rs  asset_designated.rs  asset_document.rs  designated.rs  mod.rs
src/fixtures/: users.yaml
src/mailers/: auth.rs
src/mailers/auth/forgot/: html.t
src/mailers/auth/welcome/: html.t  subject.t  text.t
src/models/: asset_designateds.rs  asset_documents.rs  assets.rs  designateds.rs  mod.rs  users.rs
src/models/_entities/: asset_designateds.rs  asset_documents.rs  assets.rs  designateds.rs  mod.rs  prelude.rs  users.rs
src/views/: auth.rs  user.rs
tests/models/: asset_designateds.rs  asset_documents.rs  mod.rs  users.rs
tests/models/snapshots/: can_create_with_password@users.snap  can_find_by_email@users.snap  can_validate_model@users.snap
tests/requests/: asset.rs  asset_designated.rs  asset_document.rs  auth.rs  designated.rs  mod.rs  notes.rs  prepare_data.rs  user.rs
tests/requests/snapshots/: can_get_current_user@user_request.snap  can_login_without_verify@auth_request.snap  can_register@auth_request-2.snap  can_register@auth_request.snap  login_with_valid_password@auth_request.snap
tests/tasks/: seed.rs
