[workspace]

[package]
name = "oblivio_loco_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-axum = "0.43.0"
shuttle-runtime = { version = "0.43.0", default-features = false }
shuttle-shared-db = { version = "0.43.0", features = ["postgres"] }


loco-rs = { version = "0.3.2" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.16" }
sea-orm = { version = "1.0.0-rc.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = "0.7.3"
include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
shuttle-service = "=0.38.0"

[[bin]]
name = "oblivio_loco_be-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "oblivio_loco_be"
path = "src/bin/shuttle.rs"

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.2"
loco-rs = { version = "0.3.2", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
